--- a/_posts/2022-05-07-INMEDIA-抗議-禁蒙面法-暴動罪成-8男女囚33至37月-3青年判入教導所.html
+++ b/_posts/2022-05-07-INMEDIA-抗議-禁蒙面法-暴動罪成-8男女囚33至37月-3青年判入教導所.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/15_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 2019年10月示威者發起遊行抗議《禁蒙面法》，26人在銅鑼灣近鵝頸橋被捕，分成3案審訊。其中11人經審訊後，全被裁定暴動罪成，部份人另被裁定使用蒙面物品及管有攻擊性武器罪成，還柙至今早（7日）於區域法院判刑。法官林偉權指本案暴動規模不少，從大量參與者組成「人鏈」運送物資往前線，可顯示早有預謀，判8名成年被告監禁33至37個月，3名青年被告則判入教導所。散庭後，親友們向被告大喊：「撐住呀！」、「等你呀！」、「好好照顧自己！」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/15_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年10月示威者發起遊行抗議《禁蒙面法》，26人在銅鑼灣近鵝頸橋被捕，分成3案審訊。其中11人經審訊後，全被裁定暴動罪成，部份人另被裁定使用蒙面物品及管有攻擊性武器罪成，還柙至今早（7日）於區域法院判刑。法官林偉權指本案暴動規模不少，從大量參與者組成「人鏈」運送物資往前線，可顯示早有預謀，判8名成年被告監禁33至37個月，3名青年被告則判入教導所。散庭後，親友們向被告大喊：「撐住呀！」、「等你呀！」、「好好照顧自己！」</p>
 <p>被告為：仇銘芝（現年30歲）、梁耀文（23歲）、黎樂恆（32歲）、何高僑（21歲）、梁偉楓（29歲）、林永聰（19歲）、張鳳嬌（30歲）、岑朗賢（18歲）、蘇朗豪（30歲）、余雪菁（19歲）、梁思婷（28歲）。他們同被控於2019年10月6日在灣仔軒尼詩道一帶，連同其他身份不詳的人士參與暴動。</p>
 <p><strong>官：參與者組「人鏈」傳送物資 顯示早有預謀</strong></p>
 <p>法官林偉權指，是次暴動規模不小，由灣仔杜魯誌道漫延至銅鑼灣的波斯富街，歷時約38分鐘後才算被遏止，聚集人數約有500，當中有人使用汽油彈，可幸沒有人遭受嚴重的身體傷害，惟路面的磚塊和馬路欄杆遭受破壞。</p>
@@ -26,6 +26,5 @@ author: 獨媒報導
 <p>事件中共有26人被起訴暴動罪。在首宗審結的案件，暫委法官高偉雄裁定5人暴動罪不成立，但各人使用蒙面物品罪成，分別判監10周、入更生中心和社會服務令。惟律政司就暴動的無罪裁決提出上訴，案件現正於高院上訴庭排期審理。</p>
 <p>至於最後一宗處理的案件涉及10名被告，將於11月4日審前覆核，並於12月1日開審。</p>
 <p>案件編號：DCCC1018/2020</p>
-<p>相關報導：</p>
-<p><a href="//www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%8A%97%E8%AD%B0%E3%80%8A%E7%A6%81%E8%92%99%E9%9D%A2%E6%B3%95%E3%80%8B%E9%81%8A%E8%A1%8C-11%E7%94%B7%E5%A5%B3%E6%9A%B4%E5%8B%95%E7%BD%AA%E6%88%90-%E9%82%84%E6%9F%99%E8%87%B357%E5%88%A4%E5%88%91">抗議《禁蒙面法》遊行 11男女暴動罪成 還柙至5.7判刑</a></p>
+<p>相關報導：<br /><a href="//www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%8A%97%E8%AD%B0%E3%80%8A%E7%A6%81%E8%92%99%E9%9D%A2%E6%B3%95%E3%80%8B%E9%81%8A%E8%A1%8C-11%E7%94%B7%E5%A5%B3%E6%9A%B4%E5%8B%95%E7%BD%AA%E6%88%90-%E9%82%84%E6%9F%99%E8%87%B357%E5%88%A4%E5%88%91">抗議《禁蒙面法》遊行 11男女暴動罪成 還柙至5.7判刑</a></p>
 </div></div></div>
