--- a/_posts/2022-05-07-INMEDIA-狄志遠-李家超政綱-確實空洞-惟將投票支持表達善意.html
+++ b/_posts/2022-05-07-INMEDIA-狄志遠-李家超政綱-確實空洞-惟將投票支持表達善意.html
@@ -8,12 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/26_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 自稱非建制派的新思維立法會議員狄志遠，屬三名未有提名行政長官選舉唯一候選人李家超的議員之一。他今日晚上向傳媒表示，經新思維討論後，決定投票支持李家超。聲明指李家超的政綱「確實空洞」，惟稱香港今日的困局需要溝通及合作，故雖然不滿意其政綱，但仍將投票支持，以表達願意與新政府作良性互動的善意。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/26_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>自稱非建制派的新思維立法會議員狄志遠，屬三名未有提名行政長官選舉唯一候選人李家超的議員之一。他今日晚上向傳媒表示，經新思維討論後，決定投票支持李家超。聲明指李家超的政綱「確實空洞」，惟稱香港今日的困局需要溝通及合作，故雖然不滿意其政綱，但仍將投票支持，以表達願意與新政府作良性互動的善意。</p>
 <p>新思維立法會議員狄志遠晚上向傳媒發聲明，表示經黨內討論後，決定投票支持李家超。他在聲明中指從政綱而言「確實空洞」，沒有具體執行計劃。不過他稱新思維認為今日香港需要溝通及合作解決問題，對立只會造成更多傷害，故決定投票支持李家超。</p>
 <p>狄志遠認為，此舉可主動表達他們願意與新政府作良性互動的善意，亦鼓勵新政府與不同團體作溝通。</p>
 <p>聲明最後稱其一票是他及新思維對李家超及新政府的寄望，盼日後施政多聽民意，容納不同聲明。他又要求李家超上任一百日內就社會和諧、政制改革、社會福利和通關提出具體措施。</p>
 <p>未有提名李家超的立法會議員尚包括立法會主席梁君彥，以及實政圓桌田北辰。</p>
-<p>狄志遠發予傳媒聲明全文：</p>
+<blockquote><p>狄志遠發予傳媒聲明全文：</p>
 <p>經過黨內深入討論，我決定在明日特首選舉投票支持李家超先生。</p>
 <p>我了解社會不少人對李先生存有不同意見，我希望李先生視這些不同意見是善意的批評。</p>
 <p>從政綱而言，李先生至今交出的政綱確實空洞，沒有具體執行計劃，這方面，李先生確實要努力改善。</p>
@@ -25,5 +25,5 @@ author: 獨媒報導
 3. 社會福利，能與社福界討論，提出解決安老院舍及殘疾人士院舍問題的具體方案。<br />
 4. 盡快通關，應與內地政府商討，早日落實和內地恢復通關。</p>
 <p>狄志遠<br />
-2022年5月7日</p>
+2022年5月7日</p></blockquote>
 </div></div></div>
