--- a/_posts/2022-05-08-INMEDIA-一人選特首-李家超當選後偕妻見記者-誤祝全港母親聖誕快樂.html
+++ b/_posts/2022-05-08-INMEDIA-一人選特首-李家超當選後偕妻見記者-誤祝全港母親聖誕快樂.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p><strong>譚耀宗大力拍手減尷尬</strong></p>
 <p>李家超以超高票當選，傳媒都希望林麗嬋可以美言幾番，但李家超替妻子擋駕，指選舉工作是他個人問題，本來不需要家人參與。他指今天是母親節，因此誠意邀請太太分享他當選的歷史時刻，又感謝對方照顧家庭：「亦都利用呢個機會，祝所有嘅母親聖誕節……呀母親節，母親節快樂。」</p>
 <p>在李家超身旁的競選辦主任譚耀宗意識李家超口誤，立即糾正「母親節」，並拍掌緩和尷尬氣氛。</p>
-<p>李家超在「勝利宣言」指，將會忠誠和堅毅承擔歷史使命。他稱在競選期間，透過網上得到幾萬條回應意見，加深對各階層了解。他又花不少篇幅提及維護國家主權，並稱要抵禦內部和外部的破壞勢力。</p>
+<p>李家超在「勝利宣言」指，將會忠誠和堅毅承擔歷史使命。他稱在競選期間，透過網上得到幾萬條回應意見，加深對各階層了解；惟他疑在稱「明白大家幾咁深愛香港呢一個家」時，說成「幾咁深愛香港呢個國家」。他又花不少篇幅提及維護國家主權，並稱要抵禦內部和外部的破壞勢力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7gf213" title="DSC_0672"><img src="https://live.staticflickr.com/65535/52058297119_d60f94f600_z.jpg" width="640" alt="DSC_0672" /></a></p>
 <p><strong>不答「假新聞」立法 不提修補撕裂</strong></p>
 <p>在提問環節，李家超重申政改不是優先項目，23條立法會按憲制責任進行，但具體內容仍有待確。他沒有回應傳媒關心的「假新聞法」立法。</p>
