--- a/_posts/2022-05-08-INMEDIA-一人選特首-今屆投票率97.74-五次需投票選舉中排第四.html
+++ b/_posts/2022-05-08-INMEDIA-一人選特首-今屆投票率97.74-五次需投票選舉中排第四.html
@@ -12,6 +12,6 @@ author: 獨媒報導
 <p>最高的是1996年，由董建華當選，400人組成「推選委員會」在第二輪選舉中投票率達99.5％。其次是去屆2017年行政長官選舉，投票率達99.33％，角逐人士包括林鄭月娥、曾俊華及胡國興。排第三為2007年行政長官選舉，曾蔭權以649票擊敗123票的公民黨梁家傑，投票率為99.1％。排最尾的是2012年行政長官選舉的94.89％，當年共有三名競逐，分別是梁振英、唐英年及民主黨何俊仁。</p>
 <p>此外，2002年行政長官及2005年行政長官補選皆只有一名候選人，而立法會是於2006年才修改法例，只有一名候選人亦需投票，故改例前選舉的唯一候選人董建華及曾蔭權皆告自動當選。</p>
 <p>得票率方面，最高為2007年曾蔭權在800名選委中得票81.1％，其次是1996年行政長官選舉，董建華在第二輪投票中獲400名選委中320名支持，支持度為80％。第二低是林鄭月娥，有64.75％。最低的是2012年當選的梁振英，獲57.4％。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2P24Pf" title="IMG_7255"><img src="https://live.staticflickr.com/65535/52058445110_b53e967e9d_z.jpg" width="640" alt="IMG_7255" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9HvW8L" title="IMG_2003"><img src="https://live.staticflickr.com/65535/52058207364_f34d3e6e9f_b.jpg" width="1024" alt="IMG_2003" /></a></p>
 <p>今屆行政長官選舉是「完善選舉制度」後首次舉行，只有李家超一名候選人。<a href="https://www.inmediahk.net/node/政經/【一人選特首｜不斷更新】首半小時投票率343-已超逾立法會選舉">近六成（59.62%）的選委，皆於投票時間首一小時投票</a>。有份投票的選委會成員，有1,461人。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
