Update VOCUS 2022-05-09 patch

--- a/_posts/2022-05-08-VOCUS-冰-火-布拉姆斯.html
+++ b/_posts/2022-05-08-VOCUS-冰-火-布拉姆斯.html
@@ -10,39 +10,31 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 
 <h3 class="draft-block draft--h3" name="header-di4fp">「缺乏匠心獨具，靈感僅是隨風搖曳的蘆葦。」</h3>
 <div class="draft-block draft--p left">冰和火的淬鍊，布拉姆斯（Johannes Brahms，1833－1897）</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:600px" class="image-block-prerender" data-src="https://images.vocus.cc/4d02faa2-3783-4a94-adfa-f89ea7b41cba.jpg" data-width="600" data-height="371" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/4d02faa2-3783-4a94-adfa-f89ea7b41cba.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">被形容為<span style="font-weight: bold; ">成熟者才懂得品味其作品內涵的音樂家</span>，深沉、內斂，卻又蘊藏如銀河般無限情愫的布拉姆斯，是西元十九世紀古典音樂「浪漫主義」（Romanticism）發展時期的主要領導者之一，憑藉著嚴謹自律的古典技法，統合過往名家形式，以不盲從當世代「標題音樂」之潮流，隻手推動了純粹音樂的寧靜革命……</div>
 <div class="draft-block draft--p left">如此偉業，不只被歷史學者視為具哲學意涵與浩瀚世界觀的作曲巨匠外，日後更被列名為<span style="font-weight: bold; ">日耳曼史上三大音樂巨人，和兩大前輩「音樂之父」巴哈（Johann Sebastian Bach）、「樂聖」貝多芬（Ludwig van Beethoven）齊名，正所謂「德國3B」！</span></div>
 <div class="draft-block draft--p left">布拉姆斯，誕生於普魯士王國的海港城市漢堡（Hamburg，今德國漢堡市），父親Jakob是職業樂手兼教師。十餘歲時，布氏即以新秀鋼琴家之姿四處進行巡演，並擔任合唱團的指揮工作。到了二十歲左右，他則來到萊茵河畔的杜塞道夫（Düsseldorf），拿著文情並茂的推薦信，正式拜入同期音樂人，也是當時名作曲家旗手的舒曼（Robert Schumann，1810－1856）門下。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:464px" class="image-block-prerender" data-src="https://images.vocus.cc/c5e58513-34eb-4a49-adad-b270d4b15a31.jpg" data-width="464" data-height="640" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">青年才俊的布拉姆斯</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/c5e58513-34eb-4a49-adad-b270d4b15a31.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">青年才俊的布拉姆斯</figcaption></div>
 <div class="draft-block draft--p left">天性惜才如尋得知己、佳音的舒曼，自然欣賞這位才華洋溢的年輕人，忘年之交的師生情誼，舒曼除多次公開推崇布拉姆斯的前途無可限量外，更把他視為家裡的一份子，尤其當舒曼的創作生涯來到尾聲，悄悄襲來的精神疾病像暴風雨似持續侵蝕理智線之際，年輕的布氏，此時彷若天選之人，捨我其誰，一肩扛起了舒曼一家的生活重擔……</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「缺乏熱情相伴的藝術是無法成就偉業的。」</span>，舒曼的諄諄教誨。</div>
 <div class="draft-block draft--p left">隨著舒曼的自殺未遂，後續被送入療養院交由專人照顧，家中瑣碎的日常事務，兒女的起居照顧，原本屬於舒曼應該留下的足跡點滴，也就成了布拉姆斯所需承擔的一切…可不若其他小有名氣的藝術工作者私生活往往多彩多姿又充滿曖昧，<span style="font-weight: bold; ">布拉姆斯，一名才二十餘歲，差不多就大學剛畢業的青年才俊，居然就此道別煙花絢爛，選擇了獨善其身，直至終老，把那可能炙熱如火山岩漿的愛神之箭硬是給折斷…或是冰封了起來，藏在心底深不可測之處。</span></div>
 <div class="draft-block draft--p left">據說背後真正的原因，就是布拉姆斯愛上了不該愛的女人！誰？布氏的心，被克拉拉．舒曼（Clara Schumann，1819－1896）一人所佔據了！也就是年齡大他14歲的師母，舒曼的牽手，更是同時代廣獲推崇的鋼琴家與作曲家。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/28cc34ec-da6f-4219-9459-5a9b820faa93.jpg" data-width="800" data-height="1019" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">克拉拉．舒曼（Clara Schumann，1819－1896）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/28cc34ec-da6f-4219-9459-5a9b820faa93.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">克拉拉．舒曼（Clara Schumann，1819－1896）</figcaption></div>
 <div class="draft-block draft--p left">眼下有失去伴侶的悲慟，還須獨力扶養舒曼所遺下8個小孩的生活壓力，我們不知道，23歲的布拉姆斯跟37歲的克拉拉，在同一個屋簷下，晨昏相處，究竟會摩擦出甚麼火花？同樣作為一流音樂人，同樣都是舒曼在世時最親密的伙伴，兩人是相依為命？還是……</div>
 <div class="draft-block draft--p left">西元1862年，歷經《第一號鋼琴協奏曲》（Piano Concerto No. 1 in D minor, Op. 15,）的首演，以及衍生出浪漫主義路線（樂派）之戰下，布拉姆斯啟程來到了維也納發展，告別了克拉拉。兩人間往來的書信據信盡數銷毀，這背後意味著什麼，我想，若是美好的柏拉圖式之愛（Platonic love），那就不用臆測也無須責難了。</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=mnyO0oE77UM"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/mnyO0oE77UM" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">堅持「古典主義」時期的嚴謹曲式風格，人在維也納創作的布拉姆斯，很快躍居當時歐洲一線的主流作曲家之一。在西元十九世紀中葉，普遍強調突破與創新的歐陸古典音樂躍進風潮中，布拉姆斯始終都秉持嚴肅和認真的態度，並以守護正統作曲的思維來認真看待自己五線譜下的音樂。<span style="font-weight: bold; ">布氏更將貝多芬（Ludwig van Beethoven，1770－1827）視為其所處世代所有音樂人必須敬仰的典範，也誓言要扮演著貝多芬精神傳承的角色；</span></div>
 <div class="draft-block draft--p left">因此布拉姆斯的《第一號交響曲》（Symphony No. 1 in C minor, Op. 68），在他仔細斟酌音色與技法，強調各樂章間之連貫精神之下，從西元1856年動筆，足足花費了他20年的時間，方於西元1876年才大功告成！完稿首演當日，果不其然，<span style="font-weight: bold; ">令人孰悉的C小調，同樣有貝氏拿手的戲劇化鋪陳，加上末樂章的集大成，被樂評讚譽為……幾乎就是貝多芬的遺產：第十號交響曲！</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=Qni2ef_MxPo"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/Qni2ef_MxPo" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">除此之外，兩首相隔23年（西元1858年與西元1881年）所完成的第一號和第二號鋼琴協奏曲，也被樂評認為是結合古典與浪漫主義時期菁華的巔峰巨作。</div>
 <div class="draft-block draft--p left">而布拉姆斯唯一一首傳世的《小提琴協奏曲》（Violin Concerto in D major, Op. 77），雖然發表初期被認為有「反小提琴獨奏家個人炫技」的意味存在，樂曲風格更主張獨奏者的身分乃完全融入樂團當中，縱然有些來自演奏大師們的不解（抗拒）雜音，但今日也已經列名古典音樂四大不朽小提琴協奏曲之一。</div>
 <h3 class="draft-block draft--h3" name="header-cgpjt">「作曲不難，然而剔除掉多餘的音符，卻是艱難的！」</h3>
-<div class="draft--imgNormal draft-block"><div><div style="height:371px" class="image-block-prerender" data-src="https://images.vocus.cc/ea1cbff4-f45d-4a2f-bf41-99bed84f04f1.jpg" data-width="371" data-height="480" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ea1cbff4-f45d-4a2f-bf41-99bed84f04f1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">時序進入西元十九世紀七零年代，布拉姆斯透過大型合唱作品《德意志安魂曲》（Ein deutsches Requiem）和上述多首樂曲的表現，擠身歐陸首屈一指的音樂名家。選擇落腳維也納的他，更擔綱起當地音樂之友協會的總監一職；後來布氏也在八年間陸續完成了第二號到第四號交響曲，並授權給梅寧根（Menningen）公爵宮廷樂團公開演出他的各式作品。<span style="font-weight: bold; ">此樂團的指揮不是別人，乃是馮．畢羅男爵（Hans Guido Freiherr von Bülow），也就是日後的「柏林愛樂」（Berliner Philharmoniker）掌門主帥。</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=bN3wlHtcR2c"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src=="https://www.youtube.com/embed/bN3wlHtcR2c" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">布拉姆斯的《第四號交響曲》（Symphony No. 4 in E minor, Op. 98），首演於西元1885年的10月25日，當天除了布氏擔任指揮一職，馮．畢羅負責大鼓，另一位作曲家理查‧史特勞斯（Richard Strauss）則敲擊三角鐵（！）；<span style="font-weight: bold; ">而且不同於一般音樂會上的冷靜與保守，布四每奏完一個樂章，台下隨即報以熱烈的掌聲，第三樂章甚至當場被要求重新演奏一次！</span>待全曲結束後，應當時梅寧根公爵與聽眾的要求，又重新演奏了第一樂章與第三樂章。西元2016年間，在一次對一百五十餘位當代指揮家所進行的調查統計中，布四交響曲獲得了總排名第六的高評價…<span style="font-weight: bold; ">被眾多指揮家點名具備巴哈跟貝多芬無窮創作能量的遠見傑作，甚至是完美到讓人生畏的交響曲經典。</span>（前面則有馬勒第九和貝多芬第九）</div>
 <div class="draft-block draft--p left">到了西元1889年，在美國「愛迪生留聲機」公司代表的跨海登門邀約下，布拉姆斯用鋼琴彈奏部分《第一號匈牙利舞曲》的方式，參與了早期LP格式的試驗性錄音工程，<span style="font-weight: bold; ">成為人類錄音史上第一位演奏自己所作樂曲的偉大音樂家</span>；同一年，布拉姆斯獲頒故鄉漢堡的榮譽市民稱號！這可是西元1948年之前，唯一一位誕生於漢堡的「漢堡榮譽市民」呢！</div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=Nzo3atXtm54"></div>
-<div class="draft-block draft--p left"></div>
+<iframe src="https://www.youtube.com/embed/Nzo3atXtm54" width="720px" height="360px"></iframe>
 <div class="draft-block draft--p left">西元1897年4月，晚年譜出不少小品集與藝術歌曲，早已榮譽等身的布拉姆斯，因癌症安詳辭世在維也納，享年64歲；距離無緣的愛人克拉拉．舒曼告別人間，僅僅不到一年的時間。</div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">「像莫扎特和其他音樂家一樣，一個晚上能夠去小酒館寫一些新東西的人是多麼幸運啊！因為他在創作的同時，自己還活著。」</span></blockquote>
 <div class="draft-block draft--p left">，西元1856年2月12日布拉姆斯寫給克拉拉的信件，極少數未被銷毀的文件之一。</div>
