--- a/_posts/2022-05-07-PQ-5月9日俄羅斯勝利日-是否成為俄烏戰爭轉折點.html
+++ b/_posts/2022-05-07-PQ-5月9日俄羅斯勝利日-是否成為俄烏戰爭轉折點.html
@@ -8,7 +8,7 @@ tags: blog
 author: 李 運理
 ---
 
-<p>下週一（5 月 9 日）為俄羅斯的勝利日，按照俄國的慣例，將在<strong>勝利日這天於莫斯科舉辦大型閱兵典禮</strong>，並且俄國總統會在紅場上對列寧的墳墓進行紀念儀式。就俄國國內意義而言，勝利日可以看做是<strong>堅固民心的手段</strong>，也藉由此機會<strong>向國內的反對勢力進行威嚇</strong>，並取悅掌權的獨裁者。</p>
+<p>下週一（5 月 9 日）為俄羅斯的勝利日，按照俄國的慣例，將在<strong>勝利日這天於莫斯科舉辦大型閱兵典禮</strong>，並且俄國總統會在紅場上對列寧的墳墓進行紀念儀式。就俄國國內意義而言，勝利日可以看做是<strong>堅固民心的手段</strong>，也藉由此機會<strong>向國內的反對勢力進行威嚇</strong>，並有取悅獨裁掌權者的效果。</p>
 <ul class="pqnote">
 <li>勝利日的歷史背景，是 1945 年 5 月 8 日納粹德國向俄羅斯提交投降書，為了紀念蘇聯成功抵抗納粹德國，便將投降書生效的 5 月 9 日定為勝利日。</li>
 </ul>
@@ -39,19 +39,19 @@ author: 李 運理
 </div>
 <h2>蒲亭上任強調民族認同　宣揚勝利日神聖不可動搖</h2>
 <p>在俄羅斯總統蒲亭上任後，便積極的利用勝利日，<strong>意圖強化俄羅斯人的民族意識</strong>。在過去的幾年內，勝利日藉由<strong>大量的軍事武器展演、大規模的愛國宣傳運動，已成為俄國最重要的國家級慶典。</strong></p>
-<p>而今年的勝利日，克里姆林宮（Kremlin）於 5 月 6 日發表聲明，<strong>強調勝利日對所有俄羅斯人是一個神聖的日子</strong>，標記著俄國人民曾遭受的犧牲、痛苦，也有對俄國勝利的自豪。因此，沒有什麼會破壞這個日子。在此聲明中，也強調總統蒲亭會按照傳統，發表談話、參與閱兵典禮，並在儀式後在無名戰士墓前獻上花圈。</p>
+<p>而今年的勝利日，克里姆林宮（Kremlin）於 5 月 6 日發表聲明，<strong>強調勝利日對所有俄羅斯人是一個神聖的日子</strong>，標記著俄國人民曾遭受的犧牲、痛苦，也有對俄國勝利的自豪。在此聲明中，也強調總統蒲亭會按照慣例，發表談話、參與閱兵典禮，並在儀式後在無名戰士墓前獻上花圈。</p>
 <div class="wp-block-image">
 <figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/cf75c520-victory-day.jpeg" alt="" class="wp-image-100500" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/cf75c520-victory-day.jpeg 1020w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/cf75c520-victory-day-300x191.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/cf75c520-victory-day-768x489.jpeg 768w" sizes="(max-width: 593px) 100vw, 593px" /><figcaption>近期在莫斯科上空進行的勝利日軍演。（圖／俄羅斯國家通訊社TASS）</figcaption></figure>
 </div>
 <h2>去納粹化、民族意識為基礎　勝利日與俄烏戰爭密不可分</h2>
-<p>以<strong>去納粹化、民族認同</strong>為背景的勝利日，很難不與今日的俄烏戰爭一併觀察。回顧俄羅斯初始發動戰爭的動機，同樣是「去納粹化」、認為烏克蘭是「同一民族」，欲阻擋其加入北約，因而對烏克蘭發動戰爭行為。</p>
+<p>以<strong>去納粹化、民族認同</strong>為背景的勝利日，很難不與今日的俄烏戰爭一併觀察。回顧俄羅斯初始發動戰爭的藉口，同樣是「去納粹化」、認為烏克蘭是「同一民族」，才欲阻擋其加入北約，因而正當化對烏克蘭的入侵行為。</p>
 <p>俄國侵略烏克蘭已近三個月，所花費的時間、遭到國際間制裁的程度，皆遠超過俄羅斯的預期，眼前的局勢也沒有蒲亭將取得勝利的跡象。儘管如此，仍未見俄羅斯有撤兵的舉動，戰爭的終點似乎遙遙無期。關於蒲亭的堅持，俄羅斯國際事務委員會主席安德烈．科爾圖諾夫（Andrei Kortunov）表示，<strong>「蒲亭至少需要一些可以向人民展示勝利的東西。」</strong></p>
-<p>鑑於勝利日和俄烏戰爭的密切關係，歐盟、北約組織以及烏克蘭對於俄羅斯近期的舉動更加警惕，擔心蒲亭會將這個日子作為一個更大的舞台，藉機宣揚戰力、發動更大規模的戰爭。</p>
+<p>鑑於勝利日和俄烏戰爭的密切關係，歐盟、北約組織以及烏克蘭對於俄羅斯近期的舉動更加警惕，擔心蒲亭會將這個日子作為一個更大的舞台，從對烏克蘭「作戰」改為「宣戰」，在軍源不足情況下，藉此動員整個俄羅斯，發動更大規模的戰爭。</p>
 <div class="wp-block-image">
 <figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-1024x682.jpg" alt="" class="wp-image-94205" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-768x511.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-1536x1022.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/03/22f42413-riga-latvia-march-05-2022-protest-against-war-in-ukraine-and-russias-invasion-people-marching-with_t20_yelwz2-2048x1363.jpg 2048w" sizes="(max-width: 547px) 100vw, 547px" /><figcaption>俄國侵略烏克蘭的主張之一是去納粹化，但諷刺的是，今年3月5日在拉脫維亞首都里加（Riga）的示威遊行標語中，「PUTLER」即為蒲亭「PUTIN」和希特勒「HITLER」的合體字，以表示蒲亭興起戰爭的行為猶如納粹希特勒。<br />圖／zelmabrezinska via Twenty20</figcaption></figure>
 </div>
 <h2>克里姆林宮否認侵略升級　獨裁政權難以預料</h2>
-<p>面對國際間的猜疑及防範，克里姆林宮於本週三否認並且<strong>以「無稽之談」（Nonsence）回應</strong>。然而，這獨裁政權並非沒有自我矛盾的前科。數個月前，俄羅斯也曾否認它打算入侵烏克蘭，卻在 2 月 24 日照著當初否認的方式發動了戰爭。</p>
+<p>面對國際間的猜疑及防範，克里姆林宮於本週三否認並且<strong>以「無稽之談」（Nonsence）回應</strong>。然而，這獨裁政權並非沒有自我矛盾的前科。數個月前，俄羅斯也曾否認它打算入侵烏克蘭，卻在 2 月 24 日照著當初否認的方式發動了戰爭，入侵烏克蘭。</p>
 <p>雖然無法推測俄國將會如何利用勝利日，然而隨著俄羅斯國家媒體大肆的為官方宣傳，並將烏克蘭戰爭描繪成第二次世界大戰的未竟之業，可以預期蒲亭將會利用勝利日此一場合<strong>，以演說喚起俄國軍人的英雄主義，激勵俄國人的民族主義，並勇於為祖國奉獻生命。</strong></p>
 <div class="wp-block-image">
 <figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/92fc85a7-截圖-2022-05-08-上午12.31.21-1024x591.png" alt="" class="wp-image-100507" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/92fc85a7-截圖-2022-05-08-上午12.31.21-1024x591.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/92fc85a7-截圖-2022-05-08-上午12.31.21-300x173.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/92fc85a7-截圖-2022-05-08-上午12.31.21-1536x887.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/92fc85a7-截圖-2022-05-08-上午12.31.21.png 1936w" sizes="(max-width: 565px) 100vw, 565px" /><figcaption>俄羅斯總統蒲亭將在勝利日參與閱兵典禮、致詞，圖為去年勝利日資料畫面。（圖／俄羅斯國家通訊社TASS）</figcaption></figure>
