--- a/_posts/2022-05-08-PQ-覺醒的硬頸時代-魏廷朝的故事.html
+++ b/_posts/2022-05-08-PQ-覺醒的硬頸時代-魏廷朝的故事.html
@@ -8,7 +8,7 @@ tags: blog
 author: 麥聊
 ---
 
-<p>魏廷朝與其大學同學謝聰敏，以及時任台大政治系主任的彭明敏，在 1964 年三人共同決定發表《台灣人民自救運動宣言》，主張國會代表全面改選、台灣的前途由台灣人民自決等。這份重要歷史文件，即出自於魏廷朝親手撰擬。<strong>魏廷朝在台灣解嚴之前，前後三次被捕入獄，共坐了 17 年 3 個月 7 日的政治黑牢，出獄後仍致力於台灣民主活動，並於 1999 年病逝。</strong></p>
+<p>魏廷朝（1935 ─ 1999 ）與其大學同學謝聰敏，以及時任台大政治系主任的彭明敏，在 1964 年三人共同決定發表《台灣人民自救運動宣言》，主張國會代表全面改選、台灣的前途由台灣人民自決等。這份重要歷史文件，即出自於魏廷朝親手撰擬。<strong>魏廷朝在台灣解嚴之前，前後三次被捕入獄，共坐了 17 年 3 個月 7 日的政治黑牢，出獄後仍致力於台灣民主活動，並於 1999 年病逝。</strong></p>
 
 
 
@@ -16,7 +16,19 @@ author: 麥聊
 
 
 
-<p class="pqnote">1964 年 9 月 20 日和彭明敏、謝聰敏一起被捕，以叛亂罪嫌起訴，1965 年 4 月 8 日魏廷朝被判八年有期徒刑。1970 年出獄之後，1971 年國民黨又誣指魏廷朝為<a href="https://zh.m.wikipedia.org/w/index.php?title=%E5%8F%B0%E5%8C%97%E8%8A%B1%E6%97%97%E9%8A%80%E8%A1%8C%E7%88%86%E7%82%B8%E6%A1%88&amp;action=edit&amp;redlink=1">台北花旗銀行爆炸案</a>，所謂台獨暴力事件的策劃人之一，連同<a href="https://zh.m.wikipedia.org/wiki/%E6%9D%8E%E6%95%96">李敖等人一起</a>被捕，被判處有期徒刑十年，此為第二次因政治案件被逮捕。出獄後，魏廷朝不改其志，堅決反對國民黨獨裁專制統治，於1979年<a href="https://zh.m.wikipedia.org/wiki/%E7%BE%8E%E9%BA%97%E5%B3%B6%E4%BA%8B%E4%BB%B6">美麗島事件</a>第三度被逮捕入獄。</p>
+<h2>魏廷朝：反國民黨的事　直接算我一份　不必通知我</h2>
+
+
+
+<p>1958 年畢業後服預官訓，到金門服役，1961 年擔任國防部「作戰情報研究室」研究員，1963年至中研院近史所工作。有一天時任國民黨中央黨部副祕書長徐慶鐘找上彭明敏，要辦份在台灣編輯，日本發行的日文月刊，名為《今日之中國》。他希望彭明敏協助找位中、日文俱佳的人來擔任日文月刊編輯，彭明敏遂推薦謝聰敏。而與謝聰敏是好友的魏廷朝，便因此常一起去彭宅談論並分析時局，後來催生出《台灣人民自救運動宣言》。</p>
+
+
+
+<p class="pqnote">1964 年 9 月 20 日魏廷朝和彭明敏、謝聰敏一起被捕，並以叛亂罪嫌起訴。1965 年 4 月 8 日魏廷朝被判八年有期徒刑。1970 年出獄之後，1971 年國民黨又誣指魏廷朝為<a href="https://zh.m.wikipedia.org/w/index.php?title=%E5%8F%B0%E5%8C%97%E8%8A%B1%E6%97%97%E9%8A%80%E8%A1%8C%E7%88%86%E7%82%B8%E6%A1%88&amp;action=edit&amp;redlink=1">台北花旗銀行爆炸案</a>，所謂台獨暴力事件的策劃人之一，連同<a href="https://zh.m.wikipedia.org/wiki/%E6%9D%8E%E6%95%96">李敖等人一起</a>被捕，被判處有期徒刑十年，此為第二次因政治案件被逮捕。出獄後，魏廷朝不改其志，堅決反對國民黨獨裁專制統治，於1979年<a href="https://zh.m.wikipedia.org/wiki/%E7%BE%8E%E9%BA%97%E5%B3%B6%E4%BA%8B%E4%BB%B6">美麗島事件</a>第三度被逮捕入獄。</p>
+
+
+
+<p>出獄後，魏廷朝曾說過相當豪氣的話：「<strong>只要有反國民黨的事，就直接算我一份，不必通知我！</strong>」邱萬興評論道：「這在白色恐怖時期，是何等氣魄與果敢的話」。</p>
 
 
 
@@ -32,7 +44,7 @@ author: 麥聊
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1024x682.jpeg" alt="" class="wp-image-100555" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1536x1023.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n.jpeg 2048w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>圖為魏廷朝先生的兒子魏新奇。 <br>（圖／取自魏筠臉書）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1024x682.jpeg" alt="" class="wp-image-100555" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n-1536x1023.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/4fdb2453-280098965_401860861946010_5593139660142280887_n.jpeg 2048w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>圖為魏廷朝先生的兒子魏新奇。 <br>（圖／取自魏筠臉書）</figcaption></figure></div>
 
 
 
