--- a/_posts/2022-05-08-INITIUM-新选举新特首诞生-而弱势的倡议在消音.html
+++ b/_posts/2022-05-08-INITIUM-新选举新特首诞生-而弱势的倡议在消音.html
@@ -21,7 +21,7 @@ author: 特约撰稿人 莫泳浵、陈欣其、SH
 <p>李家超落区探访亲建制非政府组织“新家园协会”，与基层家庭及建制派青年会面，承诺努力解决房屋需求，但李大成认为只是“选择性地回应社会”。“从现实选举而言，入到闸得他一个，他做或不做任何行动，又或摆明拉票也好，主动权完全在他手中。”</p>
 <p>每次特首选举，当有人宣布参选，不论最终能否入闸，关综联都会邀请他们与基层街坊见面。“因为参选人的政纲会反映到基层人士的诉求，所以都想带街坊与他／她会面......本身街坊没有选票，（特首选举）已经距离他们很远，假如连他们表达心声、看法的机会都没有的话，就会更加远。”</p>
 <p>事实上，这个距离难以拉近。李大成形容，与候选人互动是一个步履维艰的游说过程，“届届都难（约），始终无票，好现实.....你有票、无票真的有一定程度的分别，（左右参选人的）投入和参与度、是否关注你，选举就是这么现实。”</p>
-<p>李大成忆述2012年，唐英年、梁振英和何俊仁竞逐特首，关综联邀请唐、梁会面，同样“食白果”（不得要领），后来得知二人分别到当时被喻为“悲情城市”的天水围与街坊闭门会面后，立即询问竞选团队能否加入，最终成功坐上顺风车，与他们讨论区内经济、就业及物价等问题。当年李大成得知唐英年在深水埗落区，马上打印信件，赶到地铁站向他“突袭式”递信，期望他关注贫穷、房屋议题，唐亦有接信。</p>
+<p>李大成忆述2012年，唐英年、梁振英和何俊仁竞逐特首，关综联邀请唐、梁会面，同样“食白果”（白忙一场），后来得知二人分别到当时被喻为“悲情城市”的天水围与街坊闭门会面后，立即询问竞选团队能否加入，最终成功坐上顺风车，与他们讨论区内经济、就业及物价等问题。当年李大成得知唐英年在深水埗落区，马上打印信件，赶到地铁站向他“突袭式”递信，期望他关注贫穷、房屋议题，唐亦有接信。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220509-hongkong-the-unheard-voices-ce-election/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/21bef2d977504e2b91a80e315e6be31d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月1日，特首选举参选人李家超到访沙田探访赛马会“a家”乐龄科技教育及租赁服务中心，并与长者交流。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年5月1日，特首选举参选人李家超到访沙田探访赛马会“a家”乐龄科技教育及租赁服务中心，并与长者交流。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure>
 
