--- a/_posts/2022-05-08-INITIUM-长沙自建房坍塌后-被改变的街道和无家可归的工人.html
+++ b/_posts/2022-05-08-INITIUM-长沙自建房坍塌后-被改变的街道和无家可归的工人.html
@@ -9,7 +9,7 @@ author: 特约撰稿人 沐秋 伊知 发自新加坡
 ---
 
 <p>「房子倒塌时，韩宁政想的第一件事是“黄码的他可能要露宿街头了”。」</p><p>特约撰稿人 沐秋 伊知 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220509-mainland-changsha-rural-house-collapse/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/3fffbf0d0df940c1aaaa09fc06fa41c2.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月29日，湖南长沙，自建房倒塌现场。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年5月29日，湖南长沙，自建房倒塌现场。<span class="credit">摄：Yang Huafeng/China News Service via Getty Images</span></figcaption></figure><p>53条生命，消逝于4月29日湖南省长沙市一栋自建房的坍塌事故中。</p>
+            <figcaption itemprop="caption">2022年5月29日，湖南长沙，自建房倒塌现场。<span class="credit">摄：Yang Huafeng/China News Service via Getty Images</span></figcaption></figure><p>53条生命，消逝于4月29日一栋自建房的坍塌事故中。</p>
 <p>事发前一天，湖南省长沙市望城区迎来一场暴雨，当天降雨量超过50毫米，雷雨交加，大风席卷过金山桥街道。当天天气预报称致灾风险较高，提醒居民注意防范。两周前冰雹也刚刚光临过此地。</p>
 <p>旁边是一座城中村，内部的街巷在地图上没有名字，当地居民和长沙医学院（以下简称“长医”）的学生习惯把这里的街巷称为后街，以一街二街三街作为区分。其中，后一街与长医离得最近，步行不到三分钟，街道的营业额和学生密切绑定在一起。</p>
 <p>雨停，新的一天伊始。自2022年2月20日开学起，长医施行封校管理，直到4月20日才解封。算上寒假，三个多月略为冷清的街道涌进了被封两个月的学生，他们穿着薄外套三三两两地走在后一街上。</p>
