--- a/_posts/2022-05-08-PQ-後疫情時代第一波考驗-歐洲各大機場旅客爆量失序.html
+++ b/_posts/2022-05-08-PQ-後疫情時代第一波考驗-歐洲各大機場旅客爆量失序.html
@@ -28,7 +28,7 @@ author: 李熱葵
 
 
 
-<h2>地勤人員需輪班薪資低　招聘困難</h2>
+<h2>地勤人員　需輪班薪資低　招聘困難</h2>
 
 
 
@@ -41,7 +41,7 @@ author: 李熱葵
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Chaos at Amsterdam&#039;s Schiphol airport due to staff shortages and number of passengers" src="https://www.youtube.com/embed/yS2wosQW1b4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="Chaos at Amsterdam&#039;s Schiphol airport due to staff shortages and number of passengers" src="https://www.youtube.com/embed/yS2wosQW1b4?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption><strong>荷蘭阿姆斯特丹史基浦機場</strong>（Schiphol），自上個週末起，旅客在機場大排長龍，等待時間以數小時計（影片／<a href="https://www.youtube.com/channel/UCSrZ3UV4jOidv8ppoVuvW9Q">euronews</a> Youtube）</figcaption></figure>
 
 
