--- a/_posts/2022-05-08-PQ-覺醒的硬頸時代-魏廷朝的故事.html
+++ b/_posts/2022-05-08-PQ-覺醒的硬頸時代-魏廷朝的故事.html
@@ -12,7 +12,7 @@ author: 麥聊
 
 
 
-<p>魏廷朝出生桃園龍潭，保有客家人的硬頸精神，人稱「大魏」，就讀成功高中時，不願意配合校長潘振球歌頌蔣介石，率班集體抗議。<strong>最後在校方壓力下，只有他一人撐下來，魏廷朝雖然被成功高中無理退學處分。天資聰穎加上不屈不饒，他以半工半讀的方式，考上了台灣大學法律系。</strong></p>
+<p>魏廷朝出生桃園龍潭，保有客家人的硬頸精神，人稱「大魏」，就讀成功高中時，<strong>不願意加入校長潘振球在成功高中校內所成立的中國青年反共救國團</strong>，校方仍持續施壓威脅，如他不屈服，就要他轉學。魏廷朝翻閱大學聯考規定後，發現只要唸完高二課程，就可以同等學歷，報考大學。他最後決定不跟校方妥協，念完高二後辦理休學，保留學籍，之後再辦退學。魏廷朝得到父親的支持，加上他的刻苦自學，絕交息遊，連冬天都洗冷水澡以此自惕，經過一年的努力，最後以第一志願考上了台灣大學法律系。</p>
 
 
 
