--- a/_posts/2022-05-09-INMEDIA-林鄭與李家超會面-愛國者治港-的政治體制已圓滿建立.html
+++ b/_posts/2022-05-09-INMEDIA-林鄭與李家超會面-愛國者治港-的政治體制已圓滿建立.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/202205091.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>李家超昨日當選後，以候任行政長官身份與現任行政長官林鄭月娥，兩人在會後見記者，惟記者會不設答問環節。林鄭月娥表示，完成昨日的選舉後，本港的「愛國者治港」的政治體制已圓滿建立。李家超今日下午將拜訪四個中央駐港機構，包括中聯辦、國安公署、外交部駐港特派員公署以及解放軍駐港部隊。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6F9P85" title="無標題"><img src="https://live.staticflickr.com/65535/52060562333_e546a9cefa_z.jpg" width="640" alt="無標題" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6F9P85" title="無標題"><img src="https://live.staticflickr.com/65535/52060562333_e546a9cefa_z.jpg" width="640" alt="無標題" /></a><br /><em>林鄭月娥新聞秘書表示，兩人不會有接觸，記者建議他們做一些手勢，李家超舉起手掌後，林鄭才跟隨。</em></p>
 <p><strong>林鄭：「愛國者治港」政治體制圓滿建立</strong></p>
 <p>林鄭月娥表示完成昨日「完善」後的選舉制度最後一場選舉（選委會、立法會及行政長官選舉）後，「愛國者治港」的政治體制已圓滿建立。她感謝中央採取果斷措施，包括訂立《港區國安法》，以及「完善」香港選舉制度，又一併感謝對此表示支持的團體及人士，和感謝「千萬計」參與籌備選舉的同事。</p>
 <p>她稱會為新一屆政府提供一切所需協助，本屆政府會以最快的時間，完成重組政府架構，亦會穩控疫情，為與內地通關創造條件。</p>
