--- a/_posts/2022-05-09-INMEDIA-專訪-首踢職業即遇腰斬-鄧筵霑-珍惜有波練的日子.html
+++ b/_posts/2022-05-09-INMEDIA-專訪-首踢職業即遇腰斬-鄧筵霑-珍惜有波練的日子.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2222_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>第五波疫情早前肆虐，港超聯自二戰以後首次腰斬。今季新軍組成的香港 U23，在聯賽未響勝鼓，便要結束球季。19歲的鄧筵霑，是香港 U23陣中第三年輕球員，他接受《獨媒》訪問時自言十分珍惜「有波練」的日子，「做細有人carry，但始終唔可以畀人覺得自己係𡃁仔，就容許有失誤。好多人入場係睇比數，唔係睇你踢得好定唔好。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2222_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>第五波疫情早前肆虐，港超聯自二戰以後首次<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E8%B6%B3%E7%B8%BD%E8%85%B0%E6%96%AC%E6%B8%AF%E8%B6%85%E8%81%AF%E7%A8%B1%E6%B1%BA%E5%AE%9A%E8%89%B1%E9%9B%A3-%E6%9C%89%E7%90%83%E6%9C%83%E5%98%86%E6%94%BF%E5%BA%9C%E5%94%94%E9%87%8D%E8%A6%96%E8%B6%B3%E7%90%83">腰斬</a>。今季新軍組成的香港U23，在聯賽未響勝鼓，便要結束球季。19歲的鄧筵霑，是香港U23 陣中第三年輕球員，他接受《獨媒》訪問時自言十分珍惜「有波練」的日子，「做細有人carry，但始終唔可以畀人覺得自己係𡃁仔，就容許有失誤。好多人入場係睇比數，唔係睇你踢得好定唔好。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/20s1w0" title="無標題"><img src="https://live.staticflickr.com/65535/51418972638_9b52cf6483_z.jpg" width="640" alt="無標題" /></a><br /><em>鄧筵霑（左一）</em></p>
 <p>飛馬、愉園欠薪自降，足總副主席霍啟山季初牽頭成立香港 U23，力保港超聯維持8支球隊。在香港U23 成立<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E8%B6%B3%E7%B8%BD%E6%88%90%E7%AB%8B%E9%A6%99%E6%B8%AFu23%E9%9A%8A-%E9%9C%8D%E5%95%9F%E5%B1%B1%E5%87%BA%E8%B3%878%E4%BD%8D%E6%95%B8%E8%B4%8A%E5%8A%A9">記者會</a>上，黃威、謝家榮及鄧筵霑成為球員代表，記者都一臉疑惑，只知「學界見過佢」。原來這是主教練張健峰個主意，特地喚鄧筵霑出席，讓未滿20歲的他有機會學習面對傳媒。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/S1u623" title="DSC_1501"><img src="https://live.staticflickr.com/65535/51640697627_71dd2143eb_z.jpg" width="640" alt="DSC_1501" /></a></p>
@@ -18,18 +18,18 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/891g7R" title="DSC_8249"><img src="https://live.staticflickr.com/65535/51554986535_393910a1e6_z.jpg" width="640" alt="DSC_8249" /></a></p>
 <p>隊友都叫他的英文名James 諧音「占士」，「不過我踢防中，唔係英超嗰個踢翼。」小一開始踢足球，那年暑假參加馬會足球訓練班，「占士」後來加入傑志巴塞足球學校，和同期的顏翱天、曾以行到過西班牙，對過巴塞的青年隊，鄧筵霑最喜愛的球員是沙維、恩尼斯達和布斯基斯。</p>
 <p>後來轉到太陽國際，加盟車路士足球學校，然後順理成章成為愉園U18青年隊球員；但遇上疫情，鄧筵霑只為愉園踢了兩場預備組聯賽。</p>
-<p>原本計劃跟愉園升上一隊，但遇上連環不幸事件，先有愉園欠薪自降甲組，鄧筵霑一度以為美夢要落空，本來已叠埋心水打算踢甲組。加盟香港 U23，又碰上第五波。</p>
+<p>原本計劃跟愉園升上一隊，但遇上連環不幸事件，先有愉園欠薪自降甲組，鄧筵霑一度以為美夢要落空，本來已叠埋心水打算踢甲組。獲睇中加盟香港U23，又碰上第五波疫情。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/HK881g" title="DSC_2183"><img src="https://live.staticflickr.com/65535/51852541517_3ed007d0b9_z.jpg" width="640" alt="DSC_2183" /></a></p>
 <p><strong>前男拔隊長 外出比賽感受差距  </strong></p>
 <p>足球對鄧筵霑來說，原本只是玩票性質，立志成為職業足球員是近年的事。「嗯，其實之前嗰幾年都唔知自己踢緊啲乜，落到去又無自己風格。」記者不禁插咀，「你好似係男拔隊長噃？」鄧筵霑帶點靦腆地說，「係啦，呢幾年好少少囉，感覺上自己同職業爭好遠。」</p>
 <p>在男拔校隊踢防守中場，更試過在決賽入致勝一球，鄧筵霑亦坦言，自己其實不是「那麼隊長」，直至在精英賽和更年長的球員比賽，他才真正建立起信心。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/u54px0" title="DSC_2161"><img src="https://live.staticflickr.com/65535/51853843214_eb2fd9348f_z.jpg" width="640" alt="DSC_2161" /></a></p>
-<p>後來入選港隊青年隊，南征北討下看到和外國同齡球員的差距，這令鄧筵霑決心更努力。「我真係防中嚟㗎，雖然防守唔叻，但會繼續努力。」鄧筵霑笑言，在學界比賽「放波」很容易，職業足球則不是那麼簡單，他在香港U23更要攻守兼備，「要俾到波就一定要諗快人哋一步先得，嗯，我諗我要更努力先得。」</p>
+<p>後來入選港隊青年隊，南征北討下看到和外國同齡球員的差距，這令鄧筵霑決心更努力。「我真係防中嚟㗎，雖然防守唔叻，但會繼續努力。」鄧筵霑笑言，在學界比賽「放波」很容易，職業足球則不是那麼簡單，他在香港U23 更要攻守兼備，「要俾到波就一定要諗快人哋一步先得，嗯，我諗我要更努力先得。」</p>
 <p>香港U23 在開季前曾約戰港甲的北區，鄧筵霑自言踢得很差，憂慮需要更多時間才能適應港超聯的節奏。然而，比賽便是最好的訓練，他在數場比賽後，便已有更大的體會，「日日練波都對同一班人，比賽可以學到好多嘢，有時會俾人㩒住打⋯⋯嗯，可能都唔係有陣時。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H1o5L6" title="DSC_8361"><img src="https://live.staticflickr.com/65535/51555027915_aca6df98fb_z.jpg" width="640" alt="DSC_8361" /></a></p>
-<p><strong>處子登場視野原來好窄 悟細節的重要</strong></p>
+<p><strong>處子登場視野「原來好窄」  悟細節的重要</strong></p>
 <p>在處子上陣<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E9%A6%99%E6%B8%AFu23%E9%A6%96%E4%BB%97%E5%92%8C%E6%99%89%E5%B3%B0-%E9%9C%8D%E5%95%9F%E5%B1%B1%E5%A4%A5%E8%B6%B3%E7%B8%BD%E8%91%A3%E4%BA%8B%E9%AB%98%E8%AA%BF%E5%8B%89%E7%90%83%E5%93%A1">對晉峰的比賽</a>中，親友均有入場觀戰。鄧筵霑不其然有點緊張，但卻感到十分有趣，「好似咩都睇唔到，睇嘅位好窄，平時喺球場睇嘢好闊，但嗰場眼前淨係睇到一條線。」踢職業足球，令他更明白細節的重要，「畀波你畀到就一定，更重要係畀到佢要嗰隻腳，幫到埋下一步。」</p>
-<p>球隊今季有多名超齡球員壓陣，包括黃威、羅曉聰。鄧筵霑便表示他們會「大聲提點」，「開頭同佢哋踢都有壓力，細細個睇佢哋踢波，到做自己隊友」，又透露二人會在訓練後對一眾年輕球員再「傾下偈」，點出可以改進的地方。</p>
+<p>球隊今季有多名超齡球員壓陣，包括黃威和羅曉聰。鄧筵霑便表示他們會「大聲提點」，「開頭同佢哋踢都有壓力，細細個睇佢哋踢波，到做自己隊友」，又透露二人會在訓練後對一眾年輕球員再「傾下偈」，點出可以改進的地方。</p>
 <p><strong>七球不敵東方  的士司機送鼓勵</strong></p>
 <p>香港U23 今季曾不敵東方龍獅，淨呑對手七蛋，鄧筵霑指球隊在颱風後的狀態未及復元；但隨著多場賽事落敗，張健峰跟球員開會時說：「咁樣落去唔掂，練波都要飛沙劈石。」自此，球員練波都不再錫身，肉緊程度升級，「希望輸少啲，攞返啲甜頭。」</p>
 <p>在大敗翌日的早上，鄧筵霑和黃浩然乘坐的士到將軍澳個足球訓練中心練波，的士司機對他們說，「哦，你哋就係輸七球嗰隊，加油呀！」鄧筵霑一臉腼腆說「有喜有悲」，「原來佢都有睇，但係係因為輸波而記得我哋。」</p>
